[package]
name = "hbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
hdrhistogram = "7.5.2"
reqwest = "0.11.12"
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
