[package]
name = "hbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
futures = "0.3.24"
hdrhistogram = "7.5.2"
http = "0.2.8"
reqwest = "0.11.12"
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
